--- a/MVC/Areas/Admin/Views/Login/Login.cshtml
+++ b/MVC/Areas/Admin/Views/Login/Login.cshtml
@@ -8,10 +8,11 @@
 <div class="container">
     <div class="row">
         <div class="col-8 mx-auto" id="AdminLogin">
-            @using (Html.BeginForm("Login", "Login", new { ReturnUrl = ViewBag.ReturnUrl},FormMethod.Post, new { id = "formAdmin" }))
+            @using (Html.BeginForm("Login", "Login", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { id = "formAdmin" }))
             {
                 @Html.AntiForgeryToken();
-                @Html.ValidationSummary(true);
+                @Html.ValidationSummary(true, "", new { @class = "alert-danger" });
+
 
                 <p class="text-danger">@ViewBag.ErrorMessage</p>
 
@@ -30,7 +31,6 @@
                             <label for="InputPasswordSI">Password</label>
                             @Html.PasswordFor(model => model.Password, new { @class = "form-control", @id = "InputPasswordAD", @placeholder = "Password" })
                             @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-                            <small class="form-text text-muted"><a href="#" class="card-link" onclick="ClickToForgetPass()">Forgot your password?</a></small>
                         </div>
                     </div>
                 </div>
