--- a/MVC/Areas/Admin/Views/Orders/Update.cshtml
+++ b/MVC/Areas/Admin/Views/Orders/Update.cshtml
@@ -26,7 +26,7 @@
         <div class="col-8 offset-2">
             <div class="form-group">
                 <label for="InputShipNameAPC">Ship Name</label>
-                @Html.TextBoxFor(model => model.ShipName, new { @class = "form-control", id = "InputShipNameAPC", placeholder = "Ship name"})
+                @Html.TextBoxFor(model => model.ShipName, new { @class = "form-control", id = "InputShipNameAPC", placeholder = "Ship name" })
                 @Html.ValidationMessageFor(model => model.ShipName, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -44,7 +44,7 @@
         <div class="col-8 offset-2">
             <div class="form-group">
                 <label for="InputShipAddressAPC">Ship Address</label>
-                @Html.TextBoxFor(model => model.ShipAddress, new { @class = "form-control", id = "InputShipAddressAPC", placeholder = "Enter Ship Address", @Value = "1" })
+                @Html.TextBoxFor(model => model.ShipAddress, new { @class = "form-control", id = "InputShipAddressAPC", placeholder = "Enter Ship Address" })
                 @Html.ValidationMessageFor(model => model.ShipAddress, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -53,7 +53,7 @@
         <div class="col-8 offset-2">
             <div class="form-group">
                 <label for="InputShipEmailAPC">Ship Email</label>
-                @Html.TextBoxFor(model => model.ShipEmail, new { @class = "form-control", id = "InputShipEmailAPC", placeholder = "Ship Email", @Value = "1" })
+                @Html.TextBoxFor(model => model.ShipEmail, new { @class = "form-control", id = "InputShipEmailAPC", placeholder = "Ship Email" })
                 @Html.ValidationMessageFor(model => model.ShipEmail, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -70,22 +70,41 @@
     <div class="row">
         <div class="col-8 offset-2">
             <div class="form-group">
+                <label for="InputOrderedAPC">Confirmed</label>
+                @Html.TextBoxFor(model => model.Confirmed, new { @class = "form-control", id = "InputOrderedAPC", placeholder = "Confirmed" })
+                @Html.ValidationMessageFor(model => model.Confirmed, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-8 offset-2">
+            <div class="form-group">
+                <label for="InputOrderedAPC">TookProducts</label>
+                @Html.TextBoxFor(model => model.TookProducts, new { @class = "form-control", id = "InputOrderedAPC", placeholder = "TookProducts" })
+                @Html.ValidationMessageFor(model => model.TookProducts, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-8 offset-2">
+            <div class="form-group">
+                <label for="InputOrderedAPC">Canceled</label>
+                @Html.TextBoxFor(model => model.Canceled, new { @class = "form-control", id = "InputOrderedAPC", placeholder = "Canceled" })
+                @Html.ValidationMessageFor(model => model.Canceled, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-8 offset-2">
+            <div class="form-group">
                 <label for="InputCompleteAPC">Complete</label>
-                @Html.TextBoxFor(model => model.Complete, new { @class = "form-control", id = "InputCompleteAPC", placeholder = "Complete", @Value = "1" })
+                @Html.TextBoxFor(model => model.Complete, new { @class = "form-control", id = "InputCompleteAPC", placeholder = "Complete" })
                 @Html.ValidationMessageFor(model => model.Complete, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
-    @Html.HiddenFor(model => model.Complete);
-    <div class="row">
-        <div class="col-8 offset-2">
-            <div class="form-group">
-                <label for="InputStatusAPC">Status</label>
-                @Html.TextBoxFor(model => model.Status, new { @class = "form-control", id = "InputStatusAPC", placeholder = "Enter Status" })
-                @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>
+    @Html.HiddenFor(model => model.Status);
+
     <div class="row">
         <div class="col-5 offset-6">
             <button type="submit" class="btn btn-primary">Update</button>
