--- a/MVC/Areas/Admin/Views/Users/Update.cshtml
+++ b/MVC/Areas/Admin/Views/Users/Update.cshtml
@@ -84,17 +84,10 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-8 offset-2">
-            <div class="form-group">
-                <label for="InputAddressEU">Status</label>
-                @Html.TextBoxFor(model => model.Status, new { @class = "form-control"})
-                @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger"})
-            </div>
-        </div>
-    </div>
+
 
     @Html.HiddenFor(model => model.Active);
+    @Html.HiddenFor(model => model.Status);
 
 
 
